@@ -1,16 +1,12 @@
 package xin.vanilla.sakura.network.packet;
 
-import io.netty.buffer.ByteBuf;
 import lombok.Getter;
-import lombok.NonNull;
 import net.minecraft.network.FriendlyByteBuf;
-import net.minecraft.network.codec.StreamCodec;
-import net.minecraft.network.protocol.common.custom.CustomPacketPayload;
-import net.minecraft.resources.ResourceLocation;
-import net.neoforged.neoforge.network.handling.IPayloadContext;
-import org.jetbrains.annotations.NotNull;
-import xin.vanilla.sakura.SakuraSignIn;
+import net.minecraftforge.api.distmarker.Dist;
+import net.minecraftforge.event.network.CustomPayloadEvent;
+import net.minecraftforge.fml.DistExecutor;
 import xin.vanilla.sakura.config.ServerConfig;
+import xin.vanilla.sakura.data.IPlayerSignInData;
 import xin.vanilla.sakura.data.PlayerSignInData;
 import xin.vanilla.sakura.data.SignInRecord;
 import xin.vanilla.sakura.network.ClientProxy;
@@ -18,21 +14,9 @@ import xin.vanilla.sakura.util.CollectionUtils;
 import xin.vanilla.sakura.util.DateUtils;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Getter
-public class PlayerDataSyncPacket extends SplitPacket implements CustomPacketPayload {
-    public final static Type<PlayerDataSyncPacket> TYPE = new Type<>(ResourceLocation.fromNamespaceAndPath(SakuraSignIn.MODID, "player_data_sync"));
-    public final static StreamCodec<ByteBuf, PlayerDataSyncPacket> STREAM_CODEC = new StreamCodec<>() {
-        public @NotNull PlayerDataSyncPacket decode(@NotNull ByteBuf byteBuf) {
-            return new PlayerDataSyncPacket((new FriendlyByteBuf(byteBuf)));
-        }
-
-        public void encode(@NotNull ByteBuf byteBuf, @NotNull PlayerDataSyncPacket packet) {
-            packet.toBytes(new FriendlyByteBuf(byteBuf));
-        }
-    };
-
+public class PlayerDataSyncPacket extends SplitPacket {
     private final UUID playerUUID;
     private final int totalSignInDays;
     private final int continuousSignInDays;
@@ -41,7 +25,7 @@ public class PlayerDataSyncPacket extends SplitPacket implements CustomPacketPay
     private final boolean autoRewarded;
     private final List<SignInRecord> signInRecords;
 
-    public PlayerDataSyncPacket(UUID playerUUID, PlayerSignInData data) {
+    public PlayerDataSyncPacket(UUID playerUUID, IPlayerSignInData data) {
         super();
         this.playerUUID = playerUUID;
         this.totalSignInDays = data.getTotalSignInDays();
@@ -69,17 +53,17 @@ public class PlayerDataSyncPacket extends SplitPacket implements CustomPacketPay
 
     public PlayerDataSyncPacket(List<PlayerDataSyncPacket> packets) {
         super();
-        this.playerUUID = packets.getFirst().playerUUID;
-        this.totalSignInDays = packets.getFirst().totalSignInDays;
-        this.continuousSignInDays = packets.getFirst().continuousSignInDays;
-        this.lastSignInTime = packets.getFirst().lastSignInTime;
-        this.signInCard = packets.getFirst().signInCard;
-        this.autoRewarded = packets.getFirst().autoRewarded;
+        this.playerUUID = packets.get(0).playerUUID;
+        this.totalSignInDays = packets.get(0).totalSignInDays;
+        this.continuousSignInDays = packets.get(0).continuousSignInDays;
+        this.lastSignInTime = packets.get(0).lastSignInTime;
+        this.signInCard = packets.get(0).signInCard;
+        this.autoRewarded = packets.get(0).autoRewarded;
         this.signInRecords = packets.stream()
                 .map(PlayerDataSyncPacket::getSignInRecords)
                 .flatMap(Collection::stream)
                 .sorted(Comparator.comparing(SignInRecord::getSignInTime))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private PlayerDataSyncPacket(UUID playerUUID, int totalSignInDays, int continuousSignInDays, Date lastSignInTime, int signInCard, boolean autoRewarded) {
@@ -93,7 +77,7 @@ public class PlayerDataSyncPacket extends SplitPacket implements CustomPacketPay
         this.signInRecords = new ArrayList<>();
     }
 
-    public void toBytes(@NonNull FriendlyByteBuf buffer) {
+    public void toBytes(FriendlyByteBuf buffer) {
         super.toBytes(buffer);
         buffer.writeUUID(playerUUID);
         buffer.writeInt(this.totalSignInDays);
@@ -107,22 +91,17 @@ public class PlayerDataSyncPacket extends SplitPacket implements CustomPacketPay
         }
     }
 
-    @Override
-    public @NotNull Type<? extends CustomPacketPayload> type() {
-        return TYPE;
-    }
-
-    public static void handle(PlayerDataSyncPacket packet, IPayloadContext ctx) {
-        if (ctx.flow().isClientbound()) {
-            ctx.enqueueWork(() -> {
-                // 在客户端更新 PlayerSignInDataCapability
-                // 获取玩家并更新 Capability 数据
+    public static void handle(PlayerDataSyncPacket packet, Supplier<NetworkEvent.Context> ctx) {
+        ctx.get().enqueueWork(() -> {
+            if (ctx.get().getDirection().getReceptionSide().isClient()) {
+                // 客户端只更新网络同步副本，不参与服务端持久化。
                 List<PlayerDataSyncPacket> packets = SplitPacket.handle(packet);
                 if (CollectionUtils.isNotNullOrEmpty(packets)) {
-                    ClientProxy.handleSynPlayerData(new PlayerDataSyncPacket(packets));
+                    DistExecutor.unsafeRunWhenOn(Dist.CLIENT, () -> () -> ClientProxy.handleSynPlayerData(new PlayerDataSyncPacket(packets)));
                 }
-            });
-        }
+            }
+        });
+        ctx.setPacketHandled(true);
     }
 
     @Override
@@ -157,8 +136,8 @@ public class PlayerDataSyncPacket extends SplitPacket implements CustomPacketPay
         return result;
     }
 
-    public PlayerSignInData getData() {
-        PlayerSignInData data = new PlayerSignInData();
+    public IPlayerSignInData getData() {
+        IPlayerSignInData data = new PlayerSignInData();
         data.setTotalSignInDays(this.totalSignInDays);
         data.setContinuousSignInDays(this.continuousSignInDays);
         data.setLastSignInTime(this.lastSignInTime);
